# code

./: .ccls  .clangd  .gitignore  .gitmodules  CLAUDE.md  README  README.md  big.read.write.cpp  cross-compile.sh  dot.bash_profile  gmail.body.py  lecture.history.rb  numbers.rb  paddle.rb  tests.watchr.rb
0.algorithm/: 1010.cpp  1010_input.txt  3003.rb  8.queens.py  backtrack.cpp  backtrack2.rb  dp_fibo.cpp  dp_fibo2.rb  fast_sum.rb  insertion_sort.cpp  n.queen.py  n.queen.rb  pascal.rb  passcode.rb  segment_tree.cpp  self_no.rb  sorted_array.rb  string_add.cpp  xor1.cpp
0.education/: LineNo.java  README.md  fourbox.cpp  fourbox.py  fourbox.rb  hex2.bind.cpp  is_power_of2.cpp  line.rb  min.max.optional.cpp  min.recursion.cpp  min_max_optional.cpp  pascal.cpp  polymorphism.cpp  record2.py  runs.cpp  sample.rb  sort.string.rb  spiral2.rb  split.join.cpp  string.conversion.py  thumb_nail.cpp  thumb_nail.py  thumb_nail.rb
0.education/scope.guard/: CMakeLists.txt  scope.guard.cpp
ai/: recommendation.rb  test.cpp
ai/mnist.onnx/: CMakeLists.txt  main.cpp  save_samples.py
ai/tf/: CMakeLists.txt  compile_commands.json  kmeans.py  tf.cpp  visualize.rb
ai/tf/tf.xcode/tf.xcode/: main.cpp
ai/tf/tf.xcode/tf.xcode.xcodeproj/: project.pbxproj
ai/tf/tf.xcode/tf.xcode.xcodeproj/project.xcworkspace/xcuserdata/yielding.xcuserdatad/: UserInterfaceState.xcuserstate
ai/tf/tf.xcode/tf.xcode.xcodeproj/xcuserdata/yielding.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
ai/tf/tf.xcode/tf.xcode.xcodeproj/xcuserdata/yielding.xcuserdatad/xcschemes/: xcschememanagement.plist
ai/yolo/: CMakeLists.txt  README.md  detection.hpp  download_model.sh  main.cpp  video_processor.hpp  yolo_detector.hpp
algorithm/: 8.queens.py  backtrack.rb  backtrack1.rb  backtrack2.rb  backtracking.cpp  backtracking.ppt  bitset.rb  count_of_obvious.rb  dp_fibo.cpp  dp_fibo.rb  dp_fibo2.rb  factorize.cpp  fourbox.rb  insertion_sort.cpp  kako_passcode.rb  n.queen.py  n.queen.rb  numbers.rb  pascal.rb  passcode.rb  res.txt  segment_tree.cpp  segment_tree.rb  sorted_array.rb  string_add.cpp
anttest/: build.xml
apache/arrow/: CMakeLists.txt  main.cpp
app/: diff64.cpp  parse_maptiles.rb
automator/: to_hexarray.rb
base64/: Rakefile  base64.cpp
benchmark/: fib.py  fib.rb  mandelbrot  mandelbrot.c  mandelbrot.cpp  mandelbrot.cr  mandelbrot.go  mandelbrot.hs  mandelbrot.java  mandelbrot.js  mandelbrot.kt  mandelbrot.py  mandelbrot.rb  mandelbrot.rs  mandelbrot.swift  (+3 more)
cmake/tut-1-2/: CMakeLists.txt  tutorial1.cpp  tutorial_config.h  tutorial_config.h.in
cpp.boost/active.object/: CMakeLists.txt  active.object.cpp
cpp.boost/bounded.buffer/: CMakeLists.txt  README.1st  README.md  Rakefile  bounded.buffer.cpp
cpp.boost/fs/: .clang_complete  CMakeLists.txt  Rakefile  fs.basic.cpp  fs.copy_file.cpp  fs.copy_file2.cpp  fs.parent_path.cpp  fs.path.cpp  fs.recurse.dir.cpp  fs.simple.ls.cpp  fs.smile.cpp
cpp.boost/serialize/: CMakeLists.txt  container_device.hpp  driver.cpp  mat.serialize.cpp  mat.serialize.hpp
cpp.boost/serialize.mat/: CMakeLists.txt  driver.cpp
cpp.boost/serialize.mat/refer/: Makefile
cpp.boost/serialize.png/: CMakeLists.txt  driver.cpp
cpp.boost/serialize/refer/: Makefile  client.cpp  server.cpp
cpp.boost/spirit.v3/: CMakeLists.txt  Rakefile  adder.cpp  basic.cpp  double_list2.cpp  num_list1.cpp  rexpr.cpp  roman.cpp  test.rexpr
cpp.boost/thread.pool/: CMakeLists.txt  main.cpp
cpp.c++17/move_if_noexcept/: CMakeLists.txt  Rakefile  move_if_noexcept.cpp
cpp.c++20/custom.delete/: CMakeLists.txt  main.cpp
cpp.c++20/split.view/: CMakeLists.txt  main.cpp
cpp.c++23/optional/: .vimspector.json  CMakeLists.txt  optional.cpp
cpp.fp/caesar.cipher/: CMakeLists.txt  caesar.cpp
cpp.fp/from.to/: CMakeLists.txt  from_to.cpp
cpp.lang/constexpr2/: CMakeLists.txt
cpp.lang/custom.delete/: CMakeLists.txt
cpp.lang/deducing.this/: CMakeLists.txt  REAMDME.md  decuding.this.cpp
cpp.lang/deducing.this/basic/: CMakeLists.txt  decuding.this.cpp
cpp.lang/deducing.this/crtp/: CMakeLists.txt  matrix.cpp
cpp.lang/deducing.this/crtp2/: main.cpp
cpp.lang/deducing.this/recursive.lambda/: CMakeLists.txt  main.cpp
cpp.lang/extend.move.to.this/: CMakeLists.txt  README.md  Rakefile  ref.this.cpp
cpp.lang/fold.left.comma/: CMakeLists.txt  fold.left.comma.cpp  fold_left_comma.cpp
cpp.lang/overload.pattern/: CMakeLists.txt  README.md  main2.cpp  overload.pattern.cpp
cpp.stl/: CMakeLists.txt  generate.cpp  map_insert.cpp  pfor_each.cpp  remove_copy_if.cpp  rev_itr.cpp  reverse_iterator.cpp  set_difference.cpp  set_difference2.cpp  set_record.cpp  unique_copy.cpp  unique_copy_pred.cpp
cpp.stl/0.tfs.c++11/: README.md  test_numeric.cpp
cpp.stl/array/: Rakefile
cpp.stl/bitset/: Rakefile  reverse.cpp
cpp.stl/clamp/: clamp.cpp
cpp.stl/forward.list/: forward.list.cpp
cpp.stl/idioms/: README.md  assign.cpp  container.compact.cpp  erase.remove.cpp  line_count.cpp  remove_copy_if.cpp  reserve.test.cpp  seq.erase.cpp
cpp.stl/priority_queue/: Rakefile
cpp.stl/regex/: Rakefile  regex_sample2.cpp
cpp.stl/scoped_array/: unique_ptr.cpp
cpp.stl/standard/: accum.cpp  advance.cpp  alg2.cpp  alg3.cpp  alg5.cpp  alg6.cpp  alg7.cpp  b_search.cpp  calc.cpp  codecvt.cpp  codecvte.h  complex.cpp  complx.cpp  concord.cpp  copyex.cpp  count.cpp  eqlrange.cpp  except.cpp  exceptn.cpp  find.cpp  find_end.cpp  fstream.cpp  funct_ob.cpp  gslc_ary.cpp  gslice.cpp  hasfacet.cpp  heap_ops.cpp  ifstream.cpp  ins_itr.cpp  io_iter.cpp  limits.cpp  list.cpp  locale.cpp  makeincl.inc  mask_ary.cpp  max.cpp  max_elem.cpp  memfunrf.cpp  merge.cpp  moneyput.cpp  (+33 more)
hello.autoconf/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  libtool
hello.autoconf/include/: Makefile  Makefile.am  Makefile.in  hello.h
hello.autoconf/tests/: Makefile  Makefile.am  Makefile.in  test1  test1.cpp  test2  test2.cpp
inference.engine/: CMakeLists.txt  README.md  common.proto  example.cpp  main.cpp  object_analysis.proto  operations.proto
sfml/: CMakeLists.txt  main2.cpp  tetris_sample.cpp
(+5507 files in other folders)
