CMAKE_MINIMUM_REQUIRED (VERSION 3.15)

PROJECT (pfor_each)

SET (CMAKE_CXX_STANDARD 20)
SET (CMAKE_EXPORT_COMPILE_COMMANDS ON)

SET (SOURCES
  pfor_each.cpp
)

INCLUDE_DIRECTORIES (
  /usr/local/include 
  ${CMAKE_CURRENT_SOURCE_DIR}
)

LINK_DIRECTORIES (/usr/local/lib)

LINK_LIBRARIES (tbb)

ADD_EXECUTABLE (pfor_each ${SOURCES})
