CMAKE_MINIMUM_REQUIRED (VERSION 3.15)

PROJECT (move_if_noexcept)

SET (CMAKE_CXX_STANDARD 20)
SET (CMAKE_EXPORT_COMPILE_COMMANDS ON)

SET (SOURCES
  move_if_noexcept.cpp
)

INCLUDE_DIRECTORIES (
  /usr/local/include 
  ${CMAKE_CURRENT_SOURCE_DIR}
)

LINK_DIRECTORIES (/usr/local/lib)

LINK_LIBRARIES (tbb)

ADD_EXECUTABLE (move_if_noexcept ${SOURCES})
