CMAKE_MINIMUM_REQUIRED (VERSION 3.20)

PROJECT (custom.delete)

SET (CMAKE_CXX_STANDARD 23)
SET (CMAKE_EXPORT_COMPILE_COMMANDS ON)

SET (SOURCES
  add.cpp
  main.cpp
)

INCLUDE_DIRECTORIES (
  /usr/local/include 
  ${CMAKE_CURRENT_SOURCE_DIR}
)

LINK_DIRECTORIES (/usr/local/lib)

LINK_LIBRARIES (tbb)

ADD_EXECUTABLE (custom.delete ${SOURCES})
